worked on order section alittle bit, fixed a few bugs: trim text filter input when applying, fixed filter collapse panels not working right

--- a/src/client/styles/global.css
+++ b/src/client/styles/global.css
@@ -1,6 +1,14 @@
 /*Author: Josh Bass*/
 /*Description: Some generic style classes which can be used by any component anywhere*/
 
+.float-left{
+	float: left;
+}
+
+.float-right{
+	float: right;
+}
+
 .clear-both{
 	clear: both;
 }
